@@ -32,6 +32,7 @@ Fixes:
     * fix to not update map uv for proxy
     * fix build on Solaris 11.
     * fix duplicate after programs in group inheritance.
+    * fix return plain string in retrive surrounding text callback of entry
 
 Edje 1.7.0
 
